[project]
name = "health-guard"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan122727",email = "ermolovivan2018@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "aiogram (>=3.20.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytz (>=2025.2,<2026.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "phonenumbers (>=9.0.3,<10.0.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sqladmin (>=0.20.1,<0.21.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "itsdangerous (>=2.2.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "health_guard", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
